Issue #INNOVATION-56 by magnify: Decreased margin on smaller devices to make content to be visible without scrolling

--- a/innovationscenteret/scss/modules/_header.scss
+++ b/innovationscenteret/scss/modules/_header.scss
@@ -8,12 +8,16 @@
 .header {
   position: relative;
 
-  margin-bottom: 4em;
+  margin-bottom: 1em;
   width: 100%;
 
   background: url('../images/header-background.jpg');
   background-size: cover;
   color: #fff;
+
+  @include breakpoint($breakpoint-tablet) {
+    margin-bottom: 4em;
+  }
 
   // Header inner
   &--inner {
